created about.html file. created link to mainscreen.html in about.html file, also created link to about.html

--- a/src/main/resources/templates/mainscreen.html
+++ b/src/main/resources/templates/mainscreen.html
@@ -50,7 +50,7 @@
         </tr>
         </tbody>
     </table>
-    <h2>Complete Arrows</h2>
+    <h2>Complete Arrow</h2>
     <form th:action="@{/mainscreen}">
         Filter: <input type="text" name="productkeyword" id="productkeyword" size="50" th:value="${productkeyword}" required />
         &nbsp;
@@ -86,6 +86,8 @@
         </tr>
         </tbody>
     </table>
+    <br>
+    <a href="http://localhost:8080/about">About Us</a>
 </div>
 </body>
 </html>
