1. Created new class/controller named AboutPageController to link mainscreen.html to about.html 2. Included information about the shop in the about.html file 3. recorded changes in readme file, with relevant filenames and where in the files the code was altered

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -17,11 +17,23 @@
 <body>
 
 <div class="container">
-    <h1>About</h1>
+    <h1>About Ben's Hunting Arrow Shop</h1>
     <hr>
-    <p>info about the company and the shop</p>
-    <a href="http://localhost:8080/">Link
-        to Main Screen</a>
+    <p>     I first had this idea after my first failed hunt as a young buck.
+        As my experience and my love for the sport of hunting grew, I saw that there
+        was a need for different hunting arrows for different applications. My first experience
+        (my first failure, really) was when I was hunting for a buck and I was using a mechanical
+        broadhead for my arrows. Everything else about my shot was perfect: the range, the placement,
+        the release. The only thing that went wrong was the mechanical head did not deploy, and,
+        although it was a clean hit, the animal took off and was nowhere to be found. I was mortified that
+        in such an important moment in the hunt, one of the pieces of my equipment would fail,
+        resulting in me beating myself up, for letting an animal suffer needlessly. I vowed never to
+        let any broadhead fail on me again, which means I needed to either search for the perfect
+        broadhead, or learn how to make one myself. This is how my Hunting Arrow Shop was born:
+        my arrows will never fail. Each broadhead is a single piece of steel, with no moving parts
+        that could break on you.
+    </p>
+    <a href="http://localhost:8080/">Link to Main Screen</a>
 </div>
 
 </body>
