--- a/src/main/resources/templates/mainscreen.html
+++ b/src/main/resources/templates/mainscreen.html
@@ -87,7 +87,7 @@
         </tbody>
     </table>
     <br>
-    <a href="http://localhost:8080/about">About Us</a>
+    <a href="/about">About Us</a>
 </div>
 </body>
 </html>
