--- a/src/main/resources/templates/purchaseConfirmation.html
+++ b/src/main/resources/templates/purchaseConfirmation.html
@@ -7,7 +7,7 @@
     <title>Title</title>
 </head>
 <body>
-<h1>You have successfully purchased this product</h1>
+<h1>Purchase Successful</h1>
 
 <a href="http://localhost:8080/">Link
     to Main Screen</a>
