Almost finished Task F: need to schedule appt with instructor about decrementing inventory. everything else about this task works.

--- a/src/main/resources/templates/purchaseConfirmation.html
+++ b/src/main/resources/templates/purchaseConfirmation.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh"
-          content="0;URL='mainscreen'">
+    <meta http-equiv="refresh" content="1;URL='mainscreen'"> <!--
+    changing the content from 0 to 2 took WAY too long for me to figure out-->
+
     <!--    <meta charset="UTF-8">-->
+
     <title>Title</title>
 </head>
 <body>
