--- a/src/main/resources/templates/purchaseError.html
+++ b/src/main/resources/templates/purchaseError.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh"
-          content="0;URL='mainscreen'">
+    <meta http-equiv="refresh" content="1;URL='mainscreen'">
     <!--    <meta charset="UTF-8">-->
+
     <title>Title</title>
 </head>
 <body>
