Fixed Buy Now; Fixed Database; added MinInv and MaxInv Columns and text fields to html files. as of 3/29/24, this is the current working version of the website.

--- a/src/main/resources/templates/mainscreen.html
+++ b/src/main/resources/templates/mainscreen.html
@@ -35,6 +35,8 @@
             <th>Name</th>
             <th>Price</th>
             <th>Inventory</th>
+            <th>Minimum Inventory</th>
+            <th>Maximum Inventory</th>
             <th>Action</th>
         </tr>
         </thead>
