Deleted min and max validators, replacing them with one validator for both conditions of inventory. created test parts in bootstrapdata; removed boolean statements from inhouse and outsourced part controllers: the validator takes care of that. Current issue: validator doesn't output the error message.

--- a/src/main/resources/templates/InhousePartForm.html
+++ b/src/main/resources/templates/InhousePartForm.html
@@ -22,7 +22,7 @@
     <p th:if="${#fields.hasErrors('inv')}" th:errors="*{inv}">Inventory Error</p>
 
 <p><input type="text" path="minInv" th:field="*{minInv}" placeholder="Minimum Inventory" class="form-control mb-4 col-4"/></p>
-    <p th:if="${#fields.hasErrors('minInv')}" th:errors="*{minInv}">Minimum Inventory Error</p>
+<!--    <p th:if="${#fields.hasErrors('minInv')}" th:errors="*{minInv}">Minimum Inventory Error</p>-->
     <!-- the above line is where you type in error message and have the message change depending on inventory being above or below the limits-->
     <p><input type="text" path="maxInv" th:field="*{maxInv}" placeholder="Maximum Inventory" class="form-control mb-4 col-4"/></p>
 
