--- a/src/main/resources/templates/InhousePartForm.html
+++ b/src/main/resources/templates/InhousePartForm.html
@@ -22,12 +22,14 @@
     <p th:if="${#fields.hasErrors('inv')}" th:errors="*{inv}">Inventory Error</p>
 
 <p><input type="text" path="minInv" th:field="*{minInv}" placeholder="Minimum Inventory" class="form-control mb-4 col-4"/></p>
-<!--    <p th:if="${#fields.hasErrors('minInv')}" th:errors="*{minInv}">Minimum Inventory Error</p>-->
-    <!-- the above line is where you type in error message and have the message change depending on inventory being above or below the limits-->
+
     <p><input type="text" path="maxInv" th:field="*{maxInv}" placeholder="Maximum Inventory" class="form-control mb-4 col-4"/></p>
 
-
         <p><input type="text" th:field="*{partId}" placeholder="Part ID" class="form-control mb-4 col-4"/></p>
+
+    <div th:if="${#fields.hasAnyErrors()}">
+        <p th:each="err: ${#fields.allErrors()}" th:text="${err}"></p>
+    </div>
 
     <p><input type="submit" value="Submit" /></p>
     </form>
